# VoteBot

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  FINAL_OUTPUT.md  FINAL_OUTPUT_COMPLETE.md  IMPROVEMENT_SUMMARY.md  Makefile  PHASE1_COMPLETION_REPORT.md  QUALITY_TRANSFORMATION_REPORT.md  README.md  TYPE_SAFETY_IMPROVEMENT_REPORT.md  UI_UX_ENHANCEMENT_SUMMARY.md  VoteBot.py  config.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: python-quality.yml
Code_EXE/VoteBot(1)/: VoteBot.py
Code_EXE/VoteBot(2)/: VoteBot(invisible).py  VoteBot(invisible).spec
Code_EXE/VoteBot(3)/: VoteBot(REAL).py  VoteBot(REAL).spec
Code_EXE/VoteBot(4)/: VoteBote-1.2.py  VoteBote-1.3.py  config.json
Code_EXE/VoteBot(5)/: VoteBot5.py  config.json
Code_EXE/Votryx/: VotryxApp.py  config.json
Code_EXE/Votryx/core/: __init__.py  browser_manager.py  config.py  driver.py  i18n.py  logging_manager.py  state_manager.py  validation.py  voting_engine.py
Code_EXE/Votryx/ui/: __init__.py  onboarding.py  panel.py  strings.py
VoteBot(4)/: VoteBote-1.2.py  VoteBote-1.3.py  config.json
docs/: BUILD_WINDOWS.md  UI_IMPROVEMENTS.md
docs/screenshots/: GALLERY.md
installer/: votryx.iss
packaging/: votryx.spec
scripts/: validate_dev_setup.py
tests/: test_config.py  test_state_manager.py  test_validation.py
